--- a/tickevents-placeholder/src/app/shared/components/footer/footer.component.html
+++ b/tickevents-placeholder/src/app/shared/components/footer/footer.component.html
@@ -36,7 +36,7 @@
 
                             <div class="col-12 pl-0 mt-3">
                                 <span class="gray small">Bij het verzenden van uw e-mail gaat u akkoord met onze <a
-                                        href="../../../assets/privacy_statement_12-10-2020.pdf">privacystatement</a></span>
+                                        href="../../../../assets/privacy_statement_12-10-2020.pdf">privacystatement</a></span>
                             </div>
                         </form>
 
@@ -66,7 +66,7 @@
                 <div class="col-12 col-xl-6 order-xl-1">
                     <div class="row no-gutters">
                         <div class="col-12 mt-5">
-                            <img src="../../../assets/Logo White.svg" class="footer-logo">
+                            <img src="../../../../assets/Logo White.svg" class="footer-logo">
                         </div>
                         <div class="col-12 mt-xl-4">
                             <p class="gray footer-text">info@tickevents.nl<br>
