--- a/tickevents-placeholder/src/app/shared/components/header/header.component.html
+++ b/tickevents-placeholder/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top w p-0">
     <div class="container p-0">
-        <div class="navbar-brand pl-3 pl-md-0" routerLink="/new-home">
-            <img src="../../assets/Logo Black.svg">
+        <div class="navbar-brand pl-3 pl-md-0" routerLink="/home">
+            <img src="../../../../assets/Logo Black.svg">
         </div>
 
         <button class="navbar-toggler pr-4" type="button" data-toggle="collapse" data-target="#navContent"
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse mt-2 p-3 pr-md-0 ft-alata fs-lr" id="navContent">
             <div class="navbar-nav b ml-auto">
                 <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show"
-                    routerLink="/new-home" routerLinkActive="active">Home</a>
+                    routerLink="/home" routerLinkActive="active">Home</a>
                 <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show"
                     routerLink="/pricing" routerLinkActive="active">Prijzen</a>
                 <a class="nav-link ml-2 mr-2" data-toggle="collapse" data-target=".navbar-collapse.show"
