--- a/tickevents-placeholder/src/app/home/header/header.component.html
+++ b/tickevents-placeholder/src/app/home/header/header.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg bg-none px-3 w p-absolute w-100 justify-content-between">
 
     <!-- Navbar Logo -->
-    <a routerLink="/new-home">
+    <a routerLink="/home">
         <svg id="Logo_White" data-name="Logo White" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" height="40" viewBox="0 0 128 22.7">
             <defs>
@@ -36,7 +36,7 @@
 
     <div class="collapse navbar-collapse ft-alata mt-2 mt-lg-0 " id="nav">
         <ul class="navbar-nav  text-center ml-xl-auto">
-            <li class="nav-item py-2 py-lg-1 px-lg-3 active" routerLink="/new-home" routerLinkActive="active">Home</li>
+            <li class="nav-item py-2 py-lg-1 px-lg-3 active" routerLink="/home" routerLinkActive="active">Home</li>
             <!-- <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/about" routerLinkActive="active">Over ons</li> -->
             <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/pricing" routerLinkActive="active">Prijzen</li>
             <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/how-it-works" routerLinkActive="active">Hoe het werkt</li>
