--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <!-- Header  -->
-<app-new-home-header></app-new-home-header>
+<app-new-home-header logoColor="white"></app-new-home-header>
 <!-- End header -->
 
 <div class="container-fluid p-0">
-
+	
 	<!-- Title section -->
 	<div class="row no-gutters p-relative">
 		<div class="col">
