--- a/tickevents-placeholder/src/app/shared/components/footer/footer.component.html
+++ b/tickevents-placeholder/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="row no-gutters footer-section mt-5 pt-5 px-3 w">
     <div class="col">
-        <div class="container">
+        <div class="container p-0">
             <div class="row no-gutters">
 
                 <!-- Enter email -->
@@ -71,7 +71,7 @@
                         <div class="col-12 mt-xl-4">
                             <p class="gray footer-text">info@tickevents.nl<br>
                                 KvK: 78568706<br>
-                                BTW-ID: NL03348034B41<br>
+                                BTW-ID: NL003348034B41<br>
                                 ©Rondelle Software Solutions</p>
                         </div>
                     </div>
