--- a/tickevents-placeholder/src/app/home/header/header.component.html
+++ b/tickevents-placeholder/src/app/home/header/header.component.html
@@ -1,9 +1,9 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-none px-3 w p-absolute w-100 justify-content-between">
+<nav class="navbar navbar-expand-xl bg-none w p-absolute w-100 justify-content-between">
 
     <!-- Navbar Logo -->
     <a routerLink="/home">
-        <svg id="Logo_White" data-name="Logo White" xmlns="http://www.w3.org/2000/svg"
+        <svg *ngIf="logoColor=='white'" id="Logo_White" data-name="Logo White" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" height="40" viewBox="0 0 128 22.7">
             <defs>
                 <linearGradient id="logo-gradient" x1="1.12" y1="22.97" x2="127.05" y2="1.97"
@@ -15,6 +15,53 @@
             <path class="cls-1"
                 d="M0,6.9H4.4V17.3H6.1V6.9h4.3V5.1H0Zm12.2,2h1.7v8.5H12.2Zm8,1.6a4.17,4.17,0,0,1,1.6-.3,4.86,4.86,0,0,1,1.2.2,3.77,3.77,0,0,1,1.1.5l1.1-1.3a8,8,0,0,0-1.6-.8,5.53,5.53,0,0,0-1.8-.3,5.27,5.27,0,0,0-2.5.5,4.9,4.9,0,0,0-1.9,1.6,4,4,0,0,0-.7,2.4,4,4,0,0,0,.7,2.4A4,4,0,0,0,19.2,17a5.42,5.42,0,0,0,2.5.6,5.81,5.81,0,0,0,1.9-.3,3.88,3.88,0,0,0,1.6-1l-1-1.4a2.66,2.66,0,0,1-1.1.7,5.18,5.18,0,0,1-1.3.2,4.17,4.17,0,0,1-1.6-.3,2.68,2.68,0,0,1-1.2-.9,2.78,2.78,0,0,1-.5-1.6,2.56,2.56,0,0,1,.5-1.6A2.68,2.68,0,0,1,20.2,10.5Zm14.9,4.9a1.84,1.84,0,0,1-.7-.6l-1.2-2.1L36,8.9H33.8l-3.9,5.4V8.9H28.1v8.4h1.8L32,14l1.2,1.9.9.9a1.64,1.64,0,0,0,.7.4,2.74,2.74,0,0,0,.9.1h.7V15.5h-.6A1.66,1.66,0,0,1,35.1,15.4Zm6.1-1a4,4,0,0,1,1-.4,6.13,6.13,0,0,1,1.6-.1H45V12.2H43.8a6.84,6.84,0,0,0-1.5.1,3.54,3.54,0,0,0-1.1.4V10.6h5V8.9H39.5v8.4h7V15.6l-5.3.1Zm12,1.2L50.3,8.8H48.4l3.7,8.5h2.2L58,8.8H56.1Zm9.1-1.2a4,4,0,0,1,1-.4,6.13,6.13,0,0,1,1.6-.1h1.2V12.2H64.9a6.84,6.84,0,0,0-1.5.1,3.54,3.54,0,0,0-1.1.4V10.6h5V8.9H60.6v8.4h7V15.6l-5.3.1Zm14.8.4L72,8.9H69.9l.8,1.3v7.2h1.7V11.9l4.7,5.5h1.7V8.9H77.1Zm3.8-4.3H84v6.8h1.7s0-6.8-.1-6.7h3.2V8.9H80.9ZM97,12.3a8.77,8.77,0,0,0-2.6-.3,4,4,0,0,1-1.2-.1,2.29,2.29,0,0,1-.5-.3c0-.2-.1-.3-.1-.5s.1-.4.5-.6a2.63,2.63,0,0,1,1.2-.3,3.77,3.77,0,0,1,2.5.8l1.1-1.4a5.1,5.1,0,0,0-1.7-.8,11,11,0,0,0-1.9-.2,5.27,5.27,0,0,0-1.8.3,2.53,2.53,0,0,0-1.3.9,2.06,2.06,0,0,0-.5,1.3,2.07,2.07,0,0,0,.9,1.9,5,5,0,0,0,2.6.6,9,9,0,0,1,2,.2.66.66,0,0,1,.6.7,1,1,0,0,1-.7,1,3.57,3.57,0,0,1-1.9.4,2.76,2.76,0,0,1-1.3-.2A3.08,3.08,0,0,1,92,15a2.74,2.74,0,0,0-.4-.5l-1.2,1.2A4.53,4.53,0,0,0,92.1,17a5.26,5.26,0,0,0,2.1.5,5.64,5.64,0,0,0,3.1-.8,2.39,2.39,0,0,0,1.2-2.2,2.79,2.79,0,0,0-.3-1.3A2,2,0,0,0,97,12.3Zm30.7-5.1-1.4-1.4a9.44,9.44,0,0,0-1-1,.85.85,0,0,0-.7,0,.9.9,0,0,1-1.1,0,1,1,0,0,1-.4-.7,1.23,1.23,0,0,1,.1-.6c0-.1.1-.2.1-.3a.43.43,0,0,0-.1-.5L120.8.3a.83.83,0,0,0-.6-.3H120a.37.37,0,0,1-.3.1c-.1.1-.3.2-.4.3l-1.4,1.4-.1.1a1.31,1.31,0,0,0-.3-.4l-.6-.6a.89.89,0,0,0-.7-.3.85.85,0,0,0-.7.2c-.1,0-.1.1-.2.1L102.2,14a.83.83,0,0,0-.3.6v.3a.83.83,0,0,0,.3.6l1.4,1.4.9.9c.1.2.4.2.6.1a.72.72,0,0,1,.5-.2,1.12,1.12,0,0,1,.6.1,1.36,1.36,0,0,1,.5.8.83.83,0,0,1-.1.7.61.61,0,0,0,.1.7l2.3,2.3a1.31,1.31,0,0,0,.4.3.09.09,0,0,0,.1.1h.9c.1-.1.2-.1.3-.2l1.2-1.2.3-.3.1.1.8.8a1.07,1.07,0,0,0,1.4.1l.1-.1L127.7,8.8a2.29,2.29,0,0,0,.3-.5V7.7A2.29,2.29,0,0,0,127.7,7.2ZM111.9,19.5c-.1.1-.2.1-.3.2a.09.09,0,0,0-.1.1c0,.1-.1.2-.2.3l-1.5,1.5c-.1,0-.1,0,0-.3l-2-2c-.1-.1-.1-.1-.1-.2a2.74,2.74,0,0,0,.1-.9,1.74,1.74,0,0,0-.6-1.2,3.64,3.64,0,0,0-.9-.4,2.45,2.45,0,0,0-1.2.1c-.6-.7-1.3-1.3-2-2-.1,0-.1,0,0-.1L113.3,4.4h.1c.1,0,.2.1.3.1h.1c.1,0,.2-.1.3-.2s.1-.1.1-.2V3.8a.35.35,0,0,0-.1-.2c-.1,0-.1-.1,0-.1a18.49,18.49,0,0,0,1.4-1.4l.5-.5c0-.1,0,0,.1,0l1,1a.09.09,0,0,1,.1.1l.3.3a.09.09,0,0,0,.1.1l.6.6v.1a2.74,2.74,0,0,0-.1.9,1.49,1.49,0,0,0,.4,1.1,1.84,1.84,0,0,0,1.2.7,1.39,1.39,0,0,0,.9,0h.2c0-.1.1,0,.1,0l1.9,1.9h.1c.1,0,.1.1,0,.1l-1,1-1.6,1.6-1.8,1.8-5.7,5.7Zm1.7,1.6a3,3,0,0,0-.8-.8l.1-.1,9-9c.1-.1.1-.2.2-.2s.1.1.2.2.1.1.2.1c.3.2.7-.1.7-.5a.76.76,0,0,0-.2-.4c-.1,0-.1,0-.2-.1l.4-.4.6-.6a1,1,0,0,0,.2-1,2.29,2.29,0,0,0-.3-.5l-1.4-1.4-.9-.9a.61.61,0,0,0-.7-.1,1,1,0,0,1-1.3-.2.83.83,0,0,1-.3-.6.83.83,0,0,1,.1-.7.64.64,0,0,0,0-.6l-.1-.1-.6-.6a18.49,18.49,0,0,0,1.4-1.4l.1.1,1.1,1.1.9.9v.1a2.18,2.18,0,0,0-.1.8,1.6,1.6,0,0,0,.4,1.2,1.84,1.84,0,0,0,1.2.7,3.37,3.37,0,0,0,1-.1h.1c.7.6,1.4,1.3,2.1,2Zm5.6-10.7a1,1,0,0,0,.5.4c.2,0,.4.1.5-.1s.3-.2.2-.4v-.2c.1-.1,0-.2-.1-.3l-.3-.3a.09.09,0,0,0-.1-.1c-.2,0-.3-.1-.4-.1h-.1c-.1.1-.2.1-.3.2s-.1.1-.1.2V10c0,.1,0,.1.1.2S119.1,10.3,119.2,10.4Zm-2.4-2.7h.1c.1,0,.2-.1.3-.2s.1-.1.1-.2V6.9l-.5-.5h-.1c-.1,0-.3-.1-.4-.1h-.1c-.1,0-.2.1-.3.2v.6l.5.5C116.5,7.6,116.7,7.7,116.8,7.7ZM118,9.2c.1,0,.3.1.4.1h.1c.1,0,.2-.1.3-.2a.09.09,0,0,0,.1-.1V8.7a.27.27,0,0,0-.24-.3h-.06l-.1-.1c-.1-.2-.2-.3-.4-.3s-.1-.1-.2-.1h-.1c-.1,0-.2.1-.3.2a.09.09,0,0,0-.1.1v.5l.5.5Zm-3.4-3.4c.2.2.3.3.5.3h.2c.1-.1.2-.1.3-.2a.09.09,0,0,0,.1-.1V5.3a1.7,1.7,0,0,0-.8-.6h-.3c-.1,0-.2.1-.3.2v.4a.52.52,0,0,0,.2.4Zm-3.8,5.3-.5-.5-3.5,3.5.5.5,1.4-1.5,3,3,.6-.6-2.9-3Zm6.8-.9-.5-.5-2.5,2.5-.9-.9a.72.72,0,0,1,.2-.5l.4-.4.9-.9-.5-.5-.9.9c-.2.1-.3.3-.4.4s-.1.3-.2.5l-1.1-1,2.3-2.3-.5-.5L111,9.8l3.5,3.5Z" />
         </svg>
+
+        <svg *ngIf="logoColor=='black'" id="Laag_1" data-name="Laag 1" xmlns="http://www.w3.org/2000/svg"height="40"
+            viewBox="0 0 128 22.7">
+            <title>Logo Black</title>
+            <polygon points="0 6.9 4.4 6.9 4.4 17.3 6.1 17.3 6.1 6.9 10.4 6.9 10.4 5.1 0 5.1 0 6.9" />
+            <rect x="12.2" y="8.9" width="1.7" height="8.5" />
+            <path
+                d="M20.3,10.5a4.15,4.15,0,0,1,1.6-.3,5,5,0,0,1,1.2.2,3.7,3.7,0,0,1,1.1.5l1.1-1.3a8,8,0,0,0-1.6-.8,5.66,5.66,0,0,0-1.8-.3,5.34,5.34,0,0,0-2.5.5,4.94,4.94,0,0,0-1.9,1.6,4,4,0,0,0-.7,2.4,4,4,0,0,0,.7,2.4A4,4,0,0,0,19.3,17a5.42,5.42,0,0,0,2.5.6,5.82,5.82,0,0,0,1.9-.3,3.91,3.91,0,0,0,1.6-1l-1-1.4a2.59,2.59,0,0,1-1.1.7,5.07,5.07,0,0,1-1.3.2,4.15,4.15,0,0,1-1.6-.3,2.73,2.73,0,0,1-1.2-.9,2.77,2.77,0,0,1-.5-1.6,2.54,2.54,0,0,1,.5-1.6A2.73,2.73,0,0,1,20.3,10.5Z"
+                transform="translate(-0.1 0)" />
+            <path
+                d="M35.2,15.4a1.87,1.87,0,0,1-.7-.6l-1.2-2.1,2.8-3.8H33.9L30,14.3V8.9H28.2v8.4H30L32.1,14l1.2,1.9.9.9a1.61,1.61,0,0,0,.7.4,2.77,2.77,0,0,0,.9.1h.7V15.5h-.6A1.7,1.7,0,0,1,35.2,15.4Z"
+                transform="translate(-0.1 0)" />
+            <path
+                d="M41.3,14.4a4.18,4.18,0,0,1,1-.4,6.22,6.22,0,0,1,1.6-.1h1.2V12.2H43.9a6.62,6.62,0,0,0-1.5.1,3.58,3.58,0,0,0-1.1.4V10.6h5V8.9H39.6v8.4h7V15.6l-5.3.1Z"
+                transform="translate(-0.1 0)" />
+            <polygon points="53.2 15.6 50.3 8.8 48.4 8.8 52.1 17.3 54.3 17.3 58 8.8 56.1 8.8 53.2 15.6" />
+            <path
+                d="M62.4,14.4a4.18,4.18,0,0,1,1-.4,6.22,6.22,0,0,1,1.6-.1h1.2V12.2H65a6.62,6.62,0,0,0-1.5.1,3.58,3.58,0,0,0-1.1.4V10.6h5V8.9H60.7v8.4h7V15.6l-5.3.1Z"
+                transform="translate(-0.1 0)" />
+            <polygon
+                points="77.1 14.8 72 8.9 69.9 8.9 70.7 10.2 70.7 17.4 72.4 17.4 72.4 11.9 77.1 17.4 78.8 17.4 78.8 8.9 77.1 8.9 77.1 14.8" />
+            <path d="M81,10.5h3.1v6.8h1.7s0-6.8-.1-6.7h3.2V8.9H81Z" transform="translate(-0.1 0)" />
+            <path
+                d="M97.1,12.3a8.8,8.8,0,0,0-2.6-.3,4.12,4.12,0,0,1-1.2-.1,2.19,2.19,0,0,1-.5-.3c0-.2-.1-.3-.1-.5s.1-.4.5-.6a2.66,2.66,0,0,1,1.2-.3,3.74,3.74,0,0,1,2.5.8L98,9.6a5.31,5.31,0,0,0-1.7-.8,11.08,11.08,0,0,0-1.9-.2,5.23,5.23,0,0,0-1.8.3,2.54,2.54,0,0,0-1.3.9,2.11,2.11,0,0,0-.5,1.3,2.08,2.08,0,0,0,.9,1.9,5,5,0,0,0,2.6.6,8.75,8.75,0,0,1,2,.2.66.66,0,0,1,.6.7,1,1,0,0,1-.7,1,3.58,3.58,0,0,1-1.9.4,2.74,2.74,0,0,1-1.3-.2,3.11,3.11,0,0,1-.9-.7,2.74,2.74,0,0,0-.4-.5l-1.2,1.2A4.53,4.53,0,0,0,92.2,17a5.37,5.37,0,0,0,2.1.5,5.69,5.69,0,0,0,3.1-.8,2.4,2.4,0,0,0,1.2-2.2,2.77,2.77,0,0,0-.3-1.3A1.93,1.93,0,0,0,97.1,12.3Z"
+                transform="translate(-0.1 0)" />
+            <path
+                d="M127.8,7.2l-1.4-1.4a9.43,9.43,0,0,0-1-1,.85.85,0,0,0-.7,0,.9.9,0,0,1-1.1,0,1,1,0,0,1-.4-.7,1.27,1.27,0,0,1,.1-.6c0-.1.1-.2.1-.3a.44.44,0,0,0-.1-.5L120.9.3a.86.86,0,0,0-.6-.3h-.2a.37.37,0,0,1-.3.1c-.1.1-.3.2-.4.3L118,1.8l-.1.1a1.38,1.38,0,0,0-.3-.4L117,.9a.91.91,0,0,0-.7-.3.84.84,0,0,0-.7.2c-.1,0-.1.1-.2.1L102.3,14a.85.85,0,0,0-.3.6v.3a.86.86,0,0,0,.3.6l1.4,1.4.9.9c.1.2.4.2.6.1a.76.76,0,0,1,.5-.2,1.08,1.08,0,0,1,.6.1,1.37,1.37,0,0,1,.5.8.82.82,0,0,1-.1.7.62.62,0,0,0,.1.7l2.3,2.3a1.38,1.38,0,0,0,.4.3.1.1,0,0,0,.1.1h.9c.1-.1.2-.1.3-.2l1.2-1.2.3-.3.1.1.8.8a1.06,1.06,0,0,0,1.4.1l.1-.1L127.8,8.8a2.19,2.19,0,0,0,.3-.5V7.7A2.19,2.19,0,0,0,127.8,7.2ZM112,19.5c-.1.1-.2.1-.3.2a.1.1,0,0,0-.1.1c0,.1-.1.2-.2.3l-1.5,1.5c-.1,0-.1,0,0-.3l-2-2c-.1-.1-.1-.1-.1-.2a2.77,2.77,0,0,0,.1-.9,1.74,1.74,0,0,0-.6-1.2,3.55,3.55,0,0,0-.9-.4,2.46,2.46,0,0,0-1.2.1c-.6-.7-1.3-1.3-2-2-.1,0-.1,0,0-.1L113.4,4.4h.1c.1,0,.2.1.3.1h.1c.1,0,.2-.1.3-.2s.1-.1.1-.2V3.8a.35.35,0,0,0-.1-.2c-.1,0-.1-.1,0-.1a18.48,18.48,0,0,0,1.4-1.4l.5-.5c0-.1,0,0,.1,0l1,1a.1.1,0,0,1,.1.1l.3.3a.1.1,0,0,0,.1.1l.6.6v.1a2.77,2.77,0,0,0-.1.9,1.5,1.5,0,0,0,.4,1.1,1.85,1.85,0,0,0,1.2.7,1.39,1.39,0,0,0,.9,0h.2c0-.1.1,0,.1,0l1.9,1.9h.1c.1,0,.1.1,0,.1l-1,1-1.6,1.6-1.8,1.8-5.7,5.7Zm1.7,1.6a3,3,0,0,0-.8-.8l.1-.1,9-9c.1-.1.1-.2.2-.2s.1.1.2.2.1.1.2.1c.3.2.7-.1.7-.5a.76.76,0,0,0-.2-.4c-.1,0-.1,0-.2-.1l.4-.4.6-.6a1,1,0,0,0,.2-1,2.19,2.19,0,0,0-.3-.5l-1.4-1.4-.9-.9a.62.62,0,0,0-.7-.1,1,1,0,0,1-1.3-.2.86.86,0,0,1-.3-.6.82.82,0,0,1,.1-.7.64.64,0,0,0,0-.6l-.1-.1-.6-.6A18.48,18.48,0,0,0,120,1.2l.1.1,1.1,1.1.9.9v.1a2.2,2.2,0,0,0-.1.8,1.59,1.59,0,0,0,.4,1.2,1.85,1.85,0,0,0,1.2.7,3.4,3.4,0,0,0,1-.1h.1c.7.6,1.4,1.3,2.1,2Z"
+                transform="translate(-0.1 0)" />
+            <path
+                d="M119.3,10.4a1,1,0,0,0,.5.4c.2,0,.4.1.5-.1s.3-.2.2-.4v-.2c.1-.1,0-.2-.1-.3l-.3-.3a.1.1,0,0,0-.1-.1c-.2,0-.3-.1-.4-.1h-.1c-.1.1-.2.1-.3.2s-.1.1-.1.2V10c0,.1,0,.1.1.2S119.2,10.3,119.3,10.4Z"
+                transform="translate(-0.1 0)" />
+            <path
+                d="M116.9,7.7h.1c.1,0,.2-.1.3-.2s.1-.1.1-.2V6.9l-.5-.5h-.1c-.1,0-.3-.1-.4-.1h-.1c-.1,0-.2.1-.3.2v.6l.5.5C116.6,7.6,116.8,7.7,116.9,7.7Z"
+                transform="translate(-0.1 0)" />
+            <path
+                d="M118.1,9.2c.1,0,.3.1.4.1h.1c.1,0,.2-.1.3-.2A.1.1,0,0,0,119,9V8.7a.27.27,0,0,0-.3-.3l-.1-.1c-.1-.2-.2-.3-.4-.3s-.1-.1-.2-.1h-.1c-.1,0-.2.1-.3.2a.1.1,0,0,0-.1.1v.5l.5.5Z"
+                transform="translate(-0.1 0)" />
+            <path
+                d="M114.7,5.8c.2.2.3.3.5.3h.2c.1-.1.2-.1.3-.2a.1.1,0,0,0,.1-.1V5.3a1.7,1.7,0,0,0-.8-.6h-.3c-.1,0-.2.1-.3.2v.4a.52.52,0,0,0,.2.4Z"
+                transform="translate(-0.1 0)" />
+            <polygon
+                points="110.8 11.1 110.3 10.6 106.8 14.1 107.3 14.6 108.7 13.1 111.7 16.1 112.3 15.5 109.4 12.5 110.8 11.1" />
+            <path
+                d="M117.7,10.2l-.5-.5-2.5,2.5-.9-.9a.76.76,0,0,1,.2-.5l.4-.4.9-.9-.5-.5-.9.9c-.2.1-.3.3-.4.4s-.1.3-.2.5l-1.1-1,2.3-2.3L114,7l-2.9,2.8,3.5,3.5Z"
+                transform="translate(-0.1 0)" />
+        </svg>
+
     </a>
     <!-- End navbar logo -->
 
@@ -36,11 +83,13 @@
 
     <div class="collapse navbar-collapse ft-alata mt-2 mt-lg-0 " id="nav">
         <ul class="navbar-nav  text-center ml-xl-auto">
-            <li class="nav-item py-2 py-lg-1 px-lg-3 active" routerLink="/home" routerLinkActive="active">Home</li>
+            <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/home" routerLinkActive="active">Home</li>
             <!-- <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/about" routerLinkActive="active">Over ons</li> -->
             <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/pricing" routerLinkActive="active">Prijzen</li>
-            <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/how-it-works" routerLinkActive="active">Hoe het werkt</li>
-            <li class="nav-item py-2 py-lg-1 px-lg-5 cta-button " routerLink="/getting-started" routerLinkActive="active">Aan de slag</li>
+            <li class="nav-item py-2 py-lg-1 px-lg-3" routerLink="/how-it-works" routerLinkActive="active">Hoe het werkt
+            </li>
+            <li class="nav-item py-2 py-lg-1 px-lg-5 cta-button " routerLink="/getting-started"
+                routerLinkActive="active">Aan de slag</li>
         </ul>
     </div>
 </nav>
